# ChangeLog for app-i18n/manpages-ja
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/manpages-ja/Attic/ChangeLog,v 1.32 2004/11/23 13:07:17 hattya Exp $

*manpages-ja-20041115 (23 Nov 2004)

  23 Nov 2004; Akinori Hattori <hattya@gentoo.org>
  +manpages-ja-20041115.ebuild:
  version bump.

  16 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  manpages-ja-20040915.ebuild:
  Stable on sparc

  07 Nov 2004; Joshua Kinard <kumba@gentoo.org> manpages-ja-20040915.ebuild:
  Marked stable on mips.

  04 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
  -manpages-ja-20040315.ebuild, -manpages-ja-20040415.ebuild,
  manpages-ja-20040615.ebuild, manpages-ja-20040915.ebuild:
  Blocks >=sys-apps/groff-1.19. Removed old ebuilds and marked
  20040915 stable on x86, alpha and ppc.

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
  manpages-ja-20040415.ebuild, manpages-ja-20040615.ebuild:
  Stable on amd64.

  27 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  manpages-ja-20040615.ebuild:
  Stable on sparc

*manpages-ja-20040915 (22 Sep 2004)

  22 Sep 2004; Akinori Hattori <hattya@gentoo.org>
  +manpages-ja-20040915.ebuild:
  version bump.

  22 Sep 2004; Akinori Hattori <hattya@gentoo.org>
  manpages-ja-20040615.ebuild:
  add ~ia64.

  05 Sep 2004; Guy Martin <gmsoft@gentoo.org> manpages-ja-20040615.ebuild:
  Stable on hppa.

  26 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> manpages-ja-20040615.ebuild:
  Stable on x86, alpha and ppc.

  06 Jul 2004; Joshua Kinard <kumba@gentoo.org> manpages-ja-20040615.ebuild:
  Marked stable on mips.

  26 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> :
  Marked stable on amd64.

  25 Jun 2004; Guy Martin <gmsoft@gentoo.org> manpages-ja-20040415.ebuild:
  Marked stable on hppa.

*manpages-ja-20040615 (19 Jun 2004)

  19 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> manpages-ja-20040415.ebuild,
  manpages-ja-20040615.ebuild: