@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/manpages-ja
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/manpages-ja/Attic/ChangeLog,v 1.32 2004/11/23 13:07:17 hattya Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/manpages-ja/Attic/ChangeLog,v 1.33 2004/12/14 11:07:46 hattya Exp $
+
+  14 Dec 2004; Akinori Hattori <hattya@gentoo.org>
+  manpages-ja-20040615.ebuild, manpages-ja-20040915.ebuild:
+  stable on ia64.
 
 *manpages-ja-20041115 (23 Nov 2004)
 
